--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Marcel´s Brainwriting Blog"
+author: "Marcel Ndrecaj"
+description: "Just a small Blog to write and share what i´ve learned." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+twitter_username: "MarcelNdrecaj"
+github_username: "MarcelNd"
+linkedin_username: "Marcel Ndrecaj"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
