Update Index.md to improve the landing page. Update _config.yml to improve the Linkedin-Link

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Just a small Blog to write and share what i´ve learned." # This w
 email: "example@mail.com"
 twitter_username: "MarcelNdrecaj"
 github_username: "MarcelNd"
-linkedin_username: "Marcel Ndrecaj"
+linkedin_username: "marcel-ndrecaj-aa4b6a1a8"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
