Update _config.yml with a placeholder E-Mail

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Just a small Blog to write and share what i´ve learned." # This w
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+email: "Soon"
 twitter_username: "MarcelNdrecaj"
 github_username: "MarcelNd"
 linkedin_username: "marcel-ndrecaj-aa4b6a1a8"
