--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ titles_from_headings:
 
 defaults:
   - scope:
-      path: "/marcelsblog"
+      path: ""
       type: post
     values:
       tags: Other
